# amazon-q-developer-cli-autocomplete

./: .crux_template.md  .gitattributes  .gitignore  .lintstagedrc.mjs  .rustfmt.toml  .typos.toml  AmazonQ.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE.MIT  README.md  book.toml  codebase-summary.md  deny.toml  feed.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  turbo.json  typos.toml  vitest.config.ts
crates/alacritty_terminal/: Cargo.toml
crates/alacritty_terminal/src/: ansi.rs  event.rs  lib.rs
crates/alacritty_terminal/src/grid/: mod.rs  resize.rs  row.rs  tests.rs
crates/alacritty_terminal/src/term/: cell.rs  color.rs
crates/alacritty_terminal/tests/: ref.rs
crates/aws-toolkit-telemetry-definitions/: Cargo.toml  README.md  build.rs  def.json
crates/aws-toolkit-telemetry-definitions/src/: lib.rs
crates/chat-cli/: .gitignore  Cargo.toml  build.rs  telemetry_definitions.json
crates/chat-cli/src/: diagnostics.rs  fig_install.rs  fig_log.rs  fig_telemetry_core.rs  install.rs  lib.rs  logging.rs  main.rs  request.rs
crates/chat-cli/src/api_client/: consts.rs  credentials.rs  customization.rs  endpoints.rs  error.rs  mod.rs  model.rs  opt_out.rs  profile.rs  send_message_output.rs
crates/chat-cli/src/auth/: builder_id.rs  consts.rs  index.html  mod.rs  pkce.rs  scope.rs
crates/chat-cli/src/aws_common/: http_client.rs  mod.rs  user_agent_override_interceptor.rs
crates/chat-cli/src/cli/: debug.rs  diagnostics.rs  issue.rs  mcp.rs  mod.rs  settings.rs  telemetry.rs  uninstall.rs  update.rs  user.rs
crates/chat-cli/src/database/: mod.rs  settings.rs
crates/chat-cli/src/fig_api_client/: customization.rs  endpoints.rs  error.rs  model.rs  profile.rs
crates/chat-cli/src/fig_auth/: builder_id.rs  consts.rs  mod.rs  pkce.rs  scope.rs
crates/chat-cli/src/fig_aws_common/: user_agent_override_interceptor.rs
crates/chat-cli/src/fig_os_shim/: env.rs  mod.rs  providers.rs  sysinfo.rs
crates/chat-cli/src/fig_settings/: actions.json  error.rs  mod.rs  sqlite.rs  state.rs
crates/chat-cli/src/fig_telemetry/: cognito.rs  definitions.rs  mod.rs  util.rs
crates/chat-cli/src/fig_util/: cli_context.rs  consts.rs  directories.rs  mod.rs
crates/chat-cli/src/mcp_client/: client.rs  error.rs  facilitator_types.rs  messenger.rs  mod.rs  server.rs
crates/chat-cli/src/os/: diagnostics.rs  env.rs  mod.rs  sysinfo.rs
crates/chat-cli/src/platform/: diagnostics.rs  env.rs  fs.rs  mod.rs  os.rs  providers.rs
crates/chat-cli/src/settings/: error.rs  mod.rs  settings.rs  sqlite.rs  state.rs
crates/chat-cli/src/telemetry/: cognito.rs  core.rs  definitions.rs  endpoint.rs  mod.rs  util.rs
crates/chat-cli/test_mcp_server/: test_server.rs
crates/dbus/: Cargo.toml
crates/dbus/src/: lib.rs
crates/fig_api_client/: Cargo.toml
crates/fig_api_client/src/: consts.rs  customization.rs  endpoints.rs  error.rs  lib.rs  model.rs  profile.rs  stage.rs
crates/fig_auth/: Cargo.toml
crates/fig_auth/src/: builder_id.rs  consts.rs  error.rs  lib.rs  pkce.rs  scope.rs
crates/fig_aws_common/: Cargo.toml
crates/fig_aws_common/src/: http_client.rs  lib.rs  user_agent_override_interceptor.rs
crates/fig_desktop/: Cargo.toml  Makefile  README.md
crates/fig_desktop/fuzz/: Cargo.toml
crates/fig_desktop/icons/: icon.icns
crates/fig_desktop/src/: cli.rs  event.rs  file_watcher.rs  install.rs  main.rs  notification_bus.rs  tray.rs  update.rs  utils.rs
crates/fig_desktop_api/: Cargo.toml
crates/fig_desktop_api/src/: error.rs  handler.rs  init_script.rs  lib.rs
crates/fig_diagnostic/: Cargo.toml
crates/fig_diagnostic/src/: lib.rs
crates/fig_input_method/: Cargo.toml
crates/fig_input_method/src/: imk.rs  macos.rs  main.rs
crates/fig_install/: .gitignore  Cargo.toml
crates/fig_install/src/: common.rs  download.rs  index.rs  lib.rs  linux.rs  macos.rs
crates/fig_integrations/: Cargo.toml  build.rs
crates/fig_integrations/src/: error.rs  file.rs
crates/fig_ipc/: Cargo.toml
crates/fig_ipc/src/: buffered_reader.rs  error.rs  lib.rs  local.rs  recv_message.rs  send_recv_message.rs  unix_socket.rs
crates/fig_log/: Cargo.toml
crates/fig_log/src/: lib.rs
crates/fig_os_shim/: Cargo.toml
crates/fig_os_shim/src/: env.rs  fs.rs  platform.rs  providers.rs  sysinfo.rs
crates/fig_proto/: Cargo.toml  build.rs
crates/fig_proto/src/: fig_common.rs  figterm.rs  lib.rs  mux.rs  proto.rs  remote_hooks.rs  util.rs
crates/fig_remote_ipc/: Cargo.toml
crates/fig_remote_ipc/src/: figterm.rs  lib.rs  remote.rs
crates/fig_request/: Cargo.toml
crates/fig_request/src/: error.rs  lib.rs  midway.rs  reqwest_client.rs
crates/fig_settings/: Cargo.toml
crates/fig_settings/src/: keys.rs  lib.rs  state.rs
crates/fig_telemetry/: Cargo.toml
crates/fig_telemetry/src/: cognito.rs  event.rs  install_method.rs  lib.rs  util.rs
crates/fig_telemetry_core/: Cargo.toml
crates/fig_telemetry_core/src/: lib.rs
crates/fig_test_utils/: Cargo.toml  README.md
crates/fig_test_utils/src/: lib.rs  server.rs
crates/fig_util/: Cargo.toml
crates/fig_util/src/: consts.rs  directories.rs  error.rs  lib.rs  manifest.rs  open.rs  shell.rs  terminal.rs
crates/figterm/: Cargo.toml  Makefile  README.md
crates/figterm/src/: cleanup.rs  event_handler.rs  interceptor.rs  ipc.rs  main.rs  message.rs  update.rs
crates/macos-utils/: Cargo.toml
crates/macos-utils/appkit-nsworkspace-bindings/: Cargo.toml  build_mac.rs
crates/macos-utils/src/: accessibility.rs  applications.rs  bundle.rs  caret_position.rs  image.rs  lib.rs  os.rs  url.rs
crates/mcp_client/: Cargo.toml
crates/mcp_client/src/: client.rs  error.rs  facilitator_types.rs  lib.rs  server.rs
crates/mcp_client/test_mcp_server/: test_server.rs
crates/q_chat/: Cargo.toml
crates/q_chat/src/: cli.rs  command.rs  context.rs  conversation_state.rs  input_source.rs  lib.rs  message.rs  parser.rs  prompt.rs  shared_writer.rs  skim_integration.rs  tool_manager.rs
crates/q_cli/: Cargo.toml
crates/q_cli/src/: main.rs
crates/q_cli/tests/: cli.rs  cli_user.rs  init.rs
(+2938 files in other folders)
