[workspace]
resolver = "2"
members = [
    "crates/*",
    "crates/fig_desktop/fuzz",
    "crates/macos-utils/accessibility-master/accessibility",
    "crates/macos-utils/accessibility-master/accessibility-sys",
    "crates/macos-utils/appkit-nsworkspace-bindings",
    "tests/fig-api/fig-api-mock",
    "tests/figterm2",
]

[workspace.package]
authors = [
    "Amazon Q CLI Team (q-cli@amazon.com)",
    "Chay Nabors (nabochay@amazon.com)",
    "Brandon Kiser (bskiser@amazon.com)",
]
edition = "2021"
homepage = "https://aws.amazon.com/q/"
publish = false
version = "1.7.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
amzn-codewhisperer-client = { path = "crates/amzn-codewhisperer-client" }
amzn-codewhisperer-streaming-client = { path = "crates/amzn-codewhisperer-streaming-client" }
amzn-consolas-client = { path = "crates/amzn-consolas-client" }
amzn-qdeveloper-client = { path = "crates/amzn-qdeveloper-client" }
amzn-qdeveloper-streaming-client = { path = "crates/amzn-qdeveloper-streaming-client" }
anstream = "0.6.13"
anyhow = "1.0.97"
appkit-nsworkspace-bindings = { path = "crates/macos-utils/appkit-nsworkspace-bindings" }
async-trait = "0.1.87"
aws-smithy-runtime-api = "1.6.1"
aws-smithy-types = "1.2.10"
aws-types = "1.3.0"
base64 = "0.22.1"
block2 = "0.5.1"
bytes = "1.10.1"
bitflags = { version = "2.9.0", features = ["serde"] }
bstr = "1.1.0"
camino = { version = "1.1.3", features = ["serde1"] }
cfg-if = "1.0.0"
clap = { version = "4.5.32", features = [
    "deprecated",
    "derive",
    "string",
    "unicode",
    "wrap_help",
] }
cocoa = "0.26.0"
convert_case = "0.8.0"
core-foundation = "0.10.0"
core-foundation-sys = "0.8.7"
core-graphics = "0.24.0"
crossterm = "0.28.1"
dashmap = "6.0.1"
dirs = "5.0.0"
fig_api_client = { path = "crates/fig_api_client" }
fig_auth = { path = "crates/fig_auth" }
fig_aws_common = { path = "crates/fig_aws_common" }
fig_desktop_api = { path = "crates/fig_desktop_api" }
fig_diagnostic = { path = "crates/fig_diagnostic" }
fig_install = { path = "crates/fig_install" }
fig_integrations = { path = "crates/fig_integrations" }
fig_ipc = { path = "crates/fig_ipc" }
fig_log = { path = "crates/fig_log" }
fig_os_shim = { path = "crates/fig_os_shim" }
fig_proto = { path = "crates/fig_proto" }
fig_remote_ipc = { path = "crates/fig_remote_ipc" }
fig_request = { path = "crates/fig_request" }
fig_settings = { path = "crates/fig_settings" }
fig_telemetry = { path = "crates/fig_telemetry" }
fig_telemetry_core = { path = "crates/fig_telemetry_core" }
fig_test_utils = { path = "crates/fig_test_utils" }
fig_util = { path = "crates/fig_util" }
flate2 = "1.1.0"
flume = "0.11.0"
futures = "0.3.26"
globset = "0.4.16"
hex = "0.4.3"
http = "1.2.0"
indicatif = "0.17.11"
indoc = "2.0.6"
insta = "1.42.2"
libc = "0.2.170"
mimalloc = "0.1.43"
nix = { version = "0.29.0", features = [
    "feature",
    "fs",
    "ioctl",
    "process",
    "signal",
    "term",
    "user",
] }
objc = "0.2.7"
objc2 = "0.5.2"
objc2-app-kit = "0.2.2"
objc2-foundation = "0.2.2"
objc2-input-method-kit = "0.2.2"
parking_lot = "0.12.3"
percent-encoding = "2.2.0"
portable-pty = "0.8.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rand = "0.9.0"
regex = "1.7.0"
reqwest = { version = "0.12.12", default-features = false, features = [
    # defaults except tls
    "http2",
    "charset",
    # tls backend
    "rustls-tls",
    "rustls-tls-native-roots",
    # other features
    "gzip",
    "json",
    "socks",
    "cookies",
] }
ring = "0.17.8"
rusqlite = { version = "0.32.1", features = ["bundled", "serde_json"] }
shell-color = { path = "crates/shell-color" }
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
sha2 = "0.10.6"
shlex = "1.3.0"
similar = "2.7.0"
strum = { version = "0.27.1", features = ["derive"] }
sysinfo = "0.32.0"
thiserror = "2.0.12"
tempfile = "3.18.0"
time = { version = "0.3.39", features = [
    "parsing",
    "formatting",
    "local-offset",
    "macros",
    "serde",
] }
tokio = { version = "1.44.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
tokio-util = { version = "0.7.13", features = ["codec", "compat"] }
toml = "0.8.12"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "parking_lot",
    "time",
] }
unicode-width = "0.2.0"
url = "2.5.4"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
walkdir = "2.5.0"
which = "6.0.3"
whoami = "1.5.1"
winnow = "0.6.2"

# Keep these minor synced with reqwest
# https://github.com/seanmonstar/reqwest/blob/v0.12.12/Cargo.toml
rustls = "0.23.23"
rustls-native-certs = "0.8.1"
webpki-roots = "0.26.8"


[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
await_holding_lock = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
# doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_on_vec_items = "warn"
# match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
missing_enforced_import_renames = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
string_add_assign = "warn"
string_add = "warn"
string_lit_as_bytes = "warn"
string_to_string = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
unimplemented = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"

[profile.release]
debug = 1
incremental = true
lto = "off"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.dev.package.backtrace]
opt-level = 3
