[package]
name = "aws-toolkit-telemetry-definitions"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[build-dependencies]
convert_case = "0.8.0"
prettyplease = "0.2.30"
quote = "1.0.39"
serde.workspace = true
serde_json.workspace = true
syn = "2.0.100"

[dependencies]
amzn-toolkit-telemetry = { path = "../amzn-toolkit-telemetry" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
