[package]
name = "dbus"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
async_zip = { version = "0.0.17", features = ["deflate"] }
fig_os_shim.workspace = true
fig_util.workspace = true
futures-lite = "2.6.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
zbus = { path = "../zbus" }

[dev-dependencies]
tracing-subscriber.workspace = true
