[package]
name = "fig_api_client"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[features]
default = []

[lints]
workspace = true

[dependencies]
amzn-codewhisperer-client.workspace = true
amzn-codewhisperer-streaming-client.workspace = true
amzn-consolas-client.workspace = true
amzn-qdeveloper-client.workspace = true
amzn-qdeveloper-streaming-client.workspace = true
aws-config = "1.0.3"
aws-credential-types = "1.0.3"
aws-smithy-async = "1.2.2"
aws-smithy-runtime-api.workspace = true
aws-smithy-types.workspace = true
aws-types.workspace = true
bytes.workspace = true
fig_auth.workspace = true
fig_aws_common.workspace = true
fig_request.workspace = true
fig_settings.workspace = true
fig_util.workspace = true
http.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = { version = "0.27.1", features = ["derive"] }
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
which.workspace = true

[dev-dependencies]
aws-smithy-runtime = { version = "1.3.1", features = ["test-util"] }
tracing-subscriber.workspace = true
