[package]
name = "fig_auth"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
aws-credential-types = "1.1.6"
aws-sdk-ssooidc = "1.51.0"
aws-smithy-async = "1.2.2"
aws-smithy-runtime-api = { version = "1.1.7", features = ["http-auth"] }
aws-smithy-types = "1.2.10"
aws-types.workspace = true
base64.workspace = true
bytes.workspace = true
fig_aws_common.workspace = true
fig_settings.workspace = true
fig_telemetry_core.workspace = true
fig_util.workspace = true
http-body-util = "0.1.1"
hyper = { version = "1.6.0", features = ["server"] }
hyper-util = { version = "0.1.5", features = ["tokio"] }
percent-encoding.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
reqwest.workspace = true
tracing-subscriber.workspace = true
