[package]
name = "fig_aws_common"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aws-runtime = "1.2.2"
aws-smithy-runtime-api = "1.6.1"
aws-smithy-types = "1.1.10"
aws-types = "1.3.0"
http = "0.2.12"
tracing.workspace = true

[dev-dependencies]
aws-smithy-runtime = { version = "1.6.1", features = ["client", "test-util"] }

[lints]
workspace = true
