[package]
name = "fig_aws_common"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aws-runtime = "1.4.4"
aws-smithy-runtime-api.workspace = true
aws-smithy-types.workspace = true
aws-types.workspace = true
fig_request.workspace = true
http.workspace = true
tracing.workspace = true

[dev-dependencies]
aws-smithy-runtime = { version = "1.6.1", features = ["client", "test-util"] }

[lints]
workspace = true
