[package]
name = "fig_desktop_api"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anstream.workspace = true
async-trait.workspace = true
base64.workspace = true
bincode = "1.3.3"
camino.workspace = true
cfg-if.workspace = true
dashmap.workspace = true
fig_api_client.workspace = true
fig_auth.workspace = true
fig_install.workspace = true
fig_integrations.workspace = true
fig_os_shim.workspace = true
fig_proto.workspace = true
fig_settings.workspace = true
fig_telemetry.workspace = true
fig_util.workspace = true
fnv = "1.0.7"
serde.workspace = true
serde_json.workspace = true
shellexpand.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
which.workspace = true
whoami.workspace = true

[dev-dependencies]
reqwest.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os="macos")'.dependencies]
macos-utils = { path = "../macos-utils" }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { path = "../dbus" }
