[package]
name = "fig_input_method"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[package.metadata.bundle]
bundle_name = "CodeWhispererInputMethod"
bundle_identifier = "com.amazon.inputmethod.codewhisperer"
input_source_identifier = "com.amazon.inputmethod.codewhisperer"
invisible_in_system_ui = true
input_method_type = "palette"

[build-dependencies]
plist = "1.7.1"
serde.workspace = true
toml.workspace = true
apple-bundle = "0.1.4"

[target.'cfg(target_os = "macos")'.dependencies]
fig_ipc.workspace = true
fig_log.workspace = true
fig_proto.workspace = true
fig_util.workspace = true
macos-utils = { path = "../macos-utils" }
objc2.workspace = true
objc2-app-kit = { workspace = true, features = [
    "NSApplication",
    "NSResponder",
] }
objc2-foundation = { workspace = true, features = ["NSThread"] }
objc2-input-method-kit = { workspace = true, features = [
    "IMKServer",
    "IMKInputController",
] }
tokio.workspace = true
tracing.workspace = true
