[package]
name = "fig_install"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
bitflags.workspace = true
bytes.workspace = true
camino.workspace = true
cfg-if.workspace = true
cookie = "0.18.0"
fig_integrations.workspace = true
fig_os_shim.workspace = true
fig_request.workspace = true
fig_settings.workspace = true
fig_telemetry.workspace = true
fig_util.workspace = true
hex.workspace = true
regex.workspace = true
reqwest.workspace = true
ring.workspace = true
semver = { version = "1.0.26", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
strum = "0.26.1"
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
fig_ipc.workspace = true
libc.workspace = true
security-framework = "3.0.1"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { path = "../dbus" }
tar = "0.4.40"
zstd = "0.13.1"

[dev-dependencies]
fig_test_utils.workspace = true
tracing-subscriber.workspace = true

