[package]
name = "fig_integrations"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
dispatch = ["dep:dispatch"]

[dependencies]
async-trait.workspace = true
cfg-if.workspace = true
clap.workspace = true
dirs.workspace = true
fig_os_shim.workspace = true
fig_settings.workspace = true
fig_util.workspace = true
indoc.workspace = true
insta.workspace = true
owo-colors = "4.2.0"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { path = "../dbus" }
sysinfo.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
dispatch = { version = "0.2.0", optional = true }
macos-utils = { path = "../macos-utils" }
fig_telemetry.workspace = true
accessibility-sys = { path = "../macos-utils/accessibility-master/accessibility-sys", version = "0.1.3" }
core-foundation = "0.10.0"
plist = "1.4.0"
objc.workspace = true

[dev-dependencies]
tempfile.workspace = true
