[package]
name = "fig_ipc"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
cfg-if.workspace = true
fig_proto.workspace = true
fig_util.workspace = true
flate2.workspace = true
pin-project-lite = "0.2.12"
rand.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
whoami.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
uuid = { workspace = true, features = ["v4"] }
