[package]
name = "fig_log"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
# console = ["dep:console-subscriber"]
# sentry = ["dep:sentry-tracing"]

[dependencies]
fig_util.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-appender = "0.2.2"
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
