[package]
name = "fig_os_shim"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
cfg-if.workspace = true
dirs.workspace = true
serde.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["fs"] }

[target.'cfg(unix)'.dependencies]
sysinfo.workspace = true
nix.workspace = true

[target.'cfg(windows)'.dependencies]
sysinfo.workspace = true

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["fs", "macros", "rt"] }
