[package]
name = "fig_proto"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
arbitrary = { version = "1.2.3", optional = true, features = ["derive"] }
bytes.workspace = true
fig_util.workspace = true
hex.workspace = true
once_cell.workspace = true
prost = "0.12.1"
prost-reflect = { version = "0.13.0", features = ["serde", "derive"] }
rmp-serde = "1.1.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[build-dependencies]
prost-build = "0.12.1"
prost-reflect-build = "0.13.0"
tempfile.workspace = true
