[package]
name = "fig_proto"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
arbitrary = { version = "1.4.1", optional = true, features = ["derive"] }
bytes.workspace = true
fig_util.workspace = true
flate2.workspace = true
hex.workspace = true
prost = "0.13.3"
prost-reflect = { version = "0.14.7", features = ["serde", "derive"] }
rand.workspace = true
rmp-serde = "1.3.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[build-dependencies]
prost-build = "0.13.3"
prost-reflect-build = "0.14.0"
tempfile.workspace = true
