[package]
name = "fig_remote_ipc"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
fig_ipc.workspace = true
fig_proto.workspace = true
fig_util.workspace = true
flume = "0.11.0"
parking_lot = { workspace = true, features = ["serde"] }
serde.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
