[package]
name = "fig_request"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[features]
default = ["midway"]
midway = []

[lints]
workspace = true

[dependencies]
bytes.workspace = true
cfg-if.workspace = true
cookie = "0.18.0"
fig_settings.workspace = true
fig_util.workspace = true
reqwest_cookie_store = "0.8.0"
reqwest.workspace = true
rustls-native-certs.workspace = true
rustls-pemfile = "2.1.0"
rustls.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
url.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
mockito = "1.7.0"
tokio.workspace = true
