[package]
name = "fig_settings"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
fd-lock = "4.0.0"
fig_util.workspace = true
parking_lot = "0.12.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
rusqlite = { version = "0.31.0", features = ["bundled", "serde_json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url = "2.5.4"
uuid.workspace = true

[dev-dependencies]
fig_test = { path = "../fig_test" }
tempfile.workspace = true
