[package]
name = "fig_settings"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
fd-lock = "4.0.4"
fig_util.workspace = true
parking_lot.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
rusqlite = { workspace = true, features = ["bundled", "serde_json"] }
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
fig_test = { path = "../fig_test" }
tempfile.workspace = true
