[package]
name = "fig_telemetry"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
amzn-codewhisperer-client = { path = "../amzn-codewhisperer-client" }
amzn-toolkit-telemetry = { path = "../amzn-toolkit-telemetry" }
anyhow.workspace = true
async-trait.workspace = true
aws-credential-types = "1.1.6"
aws-sdk-cognitoidentity = "1.51.0"
aws-sdk-cognitoidentityprovider = "1.60.1"
aws-smithy-async = "1.2.2"
aws-smithy-types = "1.2.10"
aws-toolkit-telemetry-definitions = { path = "../aws-toolkit-telemetry-definitions" }
fig_auth.workspace = true
fig_aws_common.workspace = true
fig_api_client.workspace = true
fig_ipc.workspace = true
fig_os_shim.workspace = true
fig_proto.workspace = true
fig_request.workspace = true
fig_settings.workspace = true
fig_telemetry_core.workspace = true
fig_util.workspace = true
macos-utils = { path = "../macos-utils" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tracing-test = "0.2.4"
